# bare-ffmpeg

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  binding.c  binding.cc  capture.js  index.d.ts  index.js  package.json  test-vp9-minimal.js  test.js
.cache/clangd/index/: binding.cc.E6FD58176488E95A.idx
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
cmake/ports/ffmpeg/: entry.sh  entrypoint.sh.in  port.cmake
cmake/ports/libdrm/: port.cmake
cmake/ports/libopus/: port.cmake
cmake/ports/libva/: port.cmake
cmake/ports/libvpx/: port.cmake
cmake/ports/opus/: port.cmake
cmake/ports/opus/patches/: 01-windows-clang.patch
cmake/ports/svt-av1/: port.cmake
cmake/ports/x264/: port.cmake
docs/: Packet.md  SideData.md  audio-fifo.md  codec-context.md  codec-parameters.md  codec.md  constants.md  decoder.md  dictionary.md  encoder.md  filter-context.md  filter-graph.md  filter-in-out.md  filter.md  format-context.md  frame.md  hw-device-context.md  hw-frames-constraints.md  hw-frames-context.md  image.md  input-format-context.md  input-format.md  io-context.md  output-format-context.md  output-format.md  rational.md  resampler.md  scaler.md  stream.md
examples/: avsynctest-to-webm.js  catch-opus-bug.js  decode-webm.js  encode-vp8-vp9.js  extract-frame.js  hw-decode-h264-videotoolbox.js  hw-decode-videotoolbox.js  index.js  live-audio-to-whisper.js  negate-pixel.js  reduce-volume.js  sine-to-webm.js  u8-loss.js
examples/fixtures/: avsynctest.webm
lib/: audio-fifo.d.ts  audio-fifo.js  audio.js  channel-layout.d.ts  channel-layout.js  codec-context.d.ts  codec-context.js  codec-hw-config.js  codec-parameters.d.ts  codec-parameters.js  codec.d.ts  codec.js  constants.d.ts  constants.js  decoder.d.ts  decoder.js  dictionary.d.ts  dictionary.js  encoder.d.ts  encoder.js  errors.js  filter-context.js  filter-graph.js  filter-inout.js  format-context.d.ts  format-context.js  frame.d.ts  frame.js  hw-device-context.js  hw-frames-constraints.js  hw-frames-context.js  image.d.ts  image.js  input-format.d.ts  input-format.js  io-context.d.ts  io-context.js  options.js  output-format.d.ts  output-format.js  (+16 more)
test/: audio-fifo.js  audio.js  codec-config.js  codec-context.js  codec-hw-config.js  codec-parameters.js  codec.js  constants.js  decode.js  decoder.js  dictionary.js  encoder-decoder.js  encoder.js  filter-context.js  filter-graph.js  filter-inout.js  filter.js  format-context-input.js  format-context-output.js  format-context.js  frame.js  hw-device-context.js  hw-frames-constraints.js  hw-frames-context.js  image.js  index.js  input-format.js  io-context-streaming.js  io-context.js  leaks.txt  log.js  options.js  output-format.js  packet.js  rational.js  regress-timestamps.js  resampler.js  samples.js  scaler.js  stream.js
test/fixtures/: decode.snapshot.cjs
(+2 files in other folders)
